  class.

- Issue #17669: Fix crash involving finalization of generators using yield from.

- Issue #17619: Make input() check for Ctrl-C correctly on Windows.

- Issue #17610: Don't rely on non-standard behavior of the C qsort() function.

- Issue #17357: Add missing verbosity output when using -v/-vv.

Library
-------

- Issue #1159051: Back out a fix for handling corrupted gzip files that
  broke backwards compatibility.

- Issue #17915: Fix interoperability of xml.sax with file objects returned by
  codecs.open().

- Issue #16601: Restarting iteration over tarfile no more continues from where
  it left off.  Patch by Michael Birtwell.

- Issue #17289: The readline module now plays nicer with external modules
  or applications changing the rl_completer_word_break_characters global
  variable.  Initial patch by Bradley Froehle.

- Issue #12181: select module: Fix struct kevent definition on OpenBSD 64-bit
  platforms. Patch by Federico Schwindt.

- Issue #14173: Avoid crashing when reading a signal handler during
  interpreter shutdown.

- Issue #16316: mimetypes now recognizes the .xz and .txz (.tar.xz) extensions.

- Issue #15902: Fix imp.load_module() accepting None as a file when loading an
  extension module.

- Issue #17802: Fix an UnboundLocalError in html.parser.  Initial tests by
  Thomas Barlow.

- Issue #15535: Fix namedtuple pickles which were picking up the OrderedDict
  instead of just the underlying tuple.

- Issue #17192: Restore the patch for Issue #11729 which was ommitted in
  3.3.1 when updating the bundled version of libffi used by ctypes.  Update
  many libffi files that were missed in 3.3.1's update to libffi-3.0.13.

- Issue #17358: Modules loaded by imp.load_source() and load_compiled() (and by
  extention load_module()) now have a better chance of working when reloaded.

- Issue #17353: Plistlib emitted empty data tags with deeply nested datastructures

- Issue #11714: Use 'with' statements to assure a Semaphore releases a